--- a/src/app/components/lager/lager.component.html
+++ b/src/app/components/lager/lager.component.html
@@ -1,18 +1,19 @@
 <div class="lagerContainer">
   <div class="ui-g">
-    <div class="ui-g-6 noPadding square" id="indSquare" (click)="resizeOnClick('ind')" style="background-color:red;">
+    <div class="ui-g-6 noPadding square" id="indSquare" (click)="this.lagerService.resizeOnClick('ind')" style="background-color:red;">
       <h3>Ind</h3>
-      <p-growl [(value)]="msgs" life="2000"></p-growl>
+      <p-growl [(value)]="this.lagerService.msgs" life="2000"></p-growl>
       <div class="ui-g">
         <div class="ui-g-12">
-          <b *ngIf="indTelefon.imei">Imei: {{indTelefon.imei}}</b>
-          <b *ngIf="!indTelefon.imei">Indtast Imei/SN..</b></div>
+          <b *ngIf="this.lagerService.indTelefon.imei">Imei: {{this.lagerService.indTelefon.imei}}</b>
+          <b *ngIf="!this.lagerService.indTelefon.imei">Indtast Imei/SN..</b>
+        </div>
       </div>
 
       <div class="ui-g">
         <div class="ui-g-2">Produkt</div>
-        <div class="ui-g-10">
-          <p-dropdown [options]="phones" [(ngModel)]="indTelefon.product" [style]="{'width':'12em'}" filter="true">
+        <div class="ui-g-10 product-dropdown">
+          <p-dropdown [options]="this.lagerService.phones" [(ngModel)]="this.lagerService.indTelefon.product" [style]="{'width':'12em'}" filter="true">
             <ng-template let-item pTemplate="selectedItem">
               <img src="assets/showcase/images/demo/phone/{{item.label}}.jpg" style="width:16px;vertical-align:middle" />
               <span style="vertical-align:middle; margin-left: .5em">{{item.label}}</span>
@@ -24,7 +25,7 @@
               </div>
             </ng-template>
           </p-dropdown>
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="product" label="" [(ngModel)]="rememberedInputs"
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="product" label="" [(ngModel)]="this.lagerService.rememberedInputs"
             inputId="product"></p-checkbox>
         </div>
       </div>
@@ -32,8 +33,8 @@
       <div class="ui-g">
         <div class="ui-g-2"><span>Fra</span></div>
         <div class="ui-g-10">
-          <p-dropdown [options]="origins" [style]="{'width':'12em'}" [(ngModel)]="indTelefon.origin"></p-dropdown>
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="origin" label="" [(ngModel)]="rememberedInputs"
+          <p-dropdown [options]="this.lagerService.origins" [style]="{'width':'12em'}" [(ngModel)]="this.lagerService.indTelefon.origin"></p-dropdown>
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="origin" label="" [(ngModel)]="this.lagerService.rememberedInputs"
             inputId="origin"></p-checkbox>
         </div>
       </div>
@@ -41,8 +42,8 @@
       <div class="ui-g">
         <div class="ui-g-2"><span>Navn</span></div>
         <div class="ui-g-10">
-          <input id="input" class="ng-dirty ng-invalid" type="text" size="20" pInputText [(ngModel)]="indTelefon.name">
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="name" label="" [(ngModel)]="rememberedInputs"
+          <input id="input" class="ng-dirty ng-invalid" type="text" size="20" pInputText [(ngModel)]="this.lagerService.indTelefon.name">
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="name" label="" [(ngModel)]="this.lagerService.rememberedInputs"
             inputId="name"></p-checkbox>
         </div>
       </div>
@@ -50,17 +51,16 @@
       <div class="ui-g">
         <div class="ui-g-2"><span>Faktura/ID</span></div>
         <div class="ui-g-10">
-          <input id="input" type="text" class="ng-dirty ng-invalid" size="20" pInputText [(ngModel)]="indTelefon.id">
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="id" label="" [(ngModel)]="rememberedInputs" inputId="id"></p-checkbox>
+          <input id="input" type="text" class="ng-dirty ng-invalid" size="20" pInputText [(ngModel)]="this.lagerService.indTelefon.id">
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="id" label="" [(ngModel)]="this.lagerService.rememberedInputs" inputId="id"></p-checkbox>
         </div>
       </div>
 
       <div class="ui-g">
         <div class="ui-g-2"><span>Dato</span></div>
         <div class="ui-g-10">
-          <!-- <input id="input" type="text" size="20" placeholder="mm/dd/yyyy" pInputText [(ngModel)]="indTelefon.date"> -->
-          <p-calendar [(ngModel)]="indTelefon.date" dateFormat="mm/dd/yy"></p-calendar>
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="date" label="" [(ngModel)]="rememberedInputs"
+          <p-calendar [(ngModel)]="this.lagerService.indTelefon.date" dateFormat="mm/dd/yy"></p-calendar>
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="date" label="" [(ngModel)]="this.lagerService.rememberedInputs"
             inputId="date"></p-checkbox>
         </div>
       </div>
@@ -68,8 +68,8 @@
       <div class="ui-g">
         <div class="ui-g-2"><span>Leveringsmetode</span></div>
         <div class="ui-g-10">
-          <p-dropdown [options]="deliveryMethods" [style]="{'width':'12em'}" [(ngModel)]="indTelefon.deliveryMethod"></p-dropdown>
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="deliveryMethod" label="" [(ngModel)]="rememberedInputs"
+          <p-dropdown [options]="this.lagerService.deliveryMethods" [style]="{'width':'12em'}" [(ngModel)]="this.lagerService.indTelefon.deliveryMethod"></p-dropdown>
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="deliveryMethod" label="" [(ngModel)]="this.lagerService.rememberedInputs"
             inputId="deliveryMethod"></p-checkbox>
         </div>
       </div>
@@ -77,8 +77,8 @@
       <div class="ui-g">
         <div class="ui-g-2"><span>Tracking</span></div>
         <div class="ui-g-10">
-          <input id="input" type="text" size="20" pInputText [(ngModel)]="indTelefon.tracking">
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="tracking" label="" [(ngModel)]="rememberedInputs"
+          <input id="input" type="text" size="20" pInputText [(ngModel)]="this.lagerService.indTelefon.tracking">
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="tracking" label="" [(ngModel)]="this.lagerService.rememberedInputs"
             inputId="tracking"></p-checkbox>
         </div>
       </div>
@@ -86,34 +86,34 @@
       <div class="ui-g">
         <div class="ui-g-2"><span><b>Imei/SN</b></span></div>
         <div class="ui-g-10">
-          <input id="input" type="text" size="20" pInputText class="withBorders" [(ngModel)]="indTelefon.imei">
-          <p-checkbox class="checkbox" name="checkBoxGroup1" value="imei" label="" [(ngModel)]="rememberedInputs"
+          <input id="input" type="text" size="20" pInputText class="withBorders" [(ngModel)]="this.lagerService.indTelefon.imei">
+          <p-checkbox class="checkbox" name="checkBoxGroup1" value="imei" label="" [(ngModel)]="this.lagerService.rememberedInputs"
             inputId="imei"></p-checkbox>
         </div>
       </div>
 
       <div class="ui-g">
           <div class="ui-g-2 storeItemButton">
-              <button pButton type="button" label="til lager ->" (click)="sendToStorage()"></button>
+              <button pButton type="button" label="til lager ->" (click)="this.lagerService.sendToStorage()"></button>
           </div>
       </div>
     </div>
 
-    <div class="ui-g-6 noPadding square" id="udSquare" (click)="resizeOnClick('ud')" style="background-color:blue;">
+    <div class="ui-g-6 noPadding square" id="udSquare" (click)="this.lagerService.resizeOnClick('ud')" style="background-color:blue;">
       <h3>Ud</h3>
     </div>
 
-    <div class="ui-g-6 noPadding square" id="statusSquare" (click)="resizeOnClick('status')" style="background-color:yellow;">
+    <div class="ui-g-6 noPadding square" id="statusSquare" (click)="this.lagerService.resizeOnClick('status')" style="background-color:yellow;">
       <h3>Status</h3>
       <div class="ui-g">
-        <div class="ui-g-12" *ngIf="showInStatus">
+        <div class="ui-g-12" *ngIf="this.lagerService.showInStatus">
           <ul>
-            <li *ngFor="let item of indTelefon | keyvalue">{{item.key}} - {{item.value}}</li>
+            <li *ngFor="let item of this.lagerService.indTelefon | keyvalue">{{item.key}} - {{item.value}}</li>
           </ul>
         </div>
       </div>
     </div>
-    <div class=" ui-g-6 square noPadding" id="lagerSquare" (click)="resizeOnClick('lager')" style="background-color:green;">
+    <div class=" ui-g-6 square noPadding" id="lagerSquare" (click)="this.lagerService.resizeOnClick('lager')" style="background-color:green;">
       <h3>Lager</h3>
     </div>
   </div>
