added Notification service and renamed lager to ind

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <div class="ui-g-10 pageHeader">Norsetech</div>
     <div class="ui-g-2 pageMenu">
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /> <a routerLink="/home" routerLinkActive="active-link">Home</a></nav>
-      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicL.png" /> <a routerLink="/lager" routerLinkActive="active-link"> Lager</a></nav>
+      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicL.png" /> <a routerLink="/ind" routerLinkActive="active-link"> Lager</a></nav>
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /><a routerLink="/udefineret" routerLinkActive="active-link">Hvad er relevant?</a></nav>
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /><a routerLink="/udefineret" routerLinkActive="activelink"> Hvad mere?</a></nav>
     </div>
