--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,20 @@
 <div class="appContainer">
+  
+    <p-growl [(value)]="msgs" life="2000"></p-growl>
+    
+  <div class="psContainer" *ngIf="spin > 0">
+  <i class="fa fa-cog fa-spin" style="font-size:100px; color:goldenrod "></i>
+</div>
+
   <div class="ui-g">
     <div class="ui-g-2 pageLogo"></div>
     <div class="ui-g-10 pageHeader">Norsetech</div>
     <div class="ui-g-2 pageMenu">
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /> <a routerLink="/home" routerLinkActive="active-link">Home</a></nav>
-      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicL.png" /> <a routerLink="/ind" routerLinkActive="active-link"> Lager</a></nav>
-      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /><a routerLink="/udefineret" routerLinkActive="active-link">Hvad er relevant?</a></nav>
-      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /><a routerLink="/udefineret" routerLinkActive="activelink"> Hvad mere?</a></nav>
+      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicI.png" /> <a routerLink="/ind" routerLinkActive="active-link">Ind</a></nav>
+      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicU.png" /><a routerLink="/ud" routerLinkActive="active-link">Ud</a></nav>
+      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicS.png" /><a routerLink="/status" routerLinkActive="activelink">Status</a></nav>
+      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicL.png" /><a routerLink="/lager" routerLinkActive="activelink">Lager</a></nav>
     </div>
     <div class="ui-g-10 pageView">
       <router-outlet></router-outlet>
