--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,21 +1,38 @@
 .appContainer{
 
+    .psContainer{
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+
+        i{
+            width: 90%;
+            position: fixed;
+            left: 50%;
+            top: 40%;
+            margin: 0 0 0 -37.5%;
+            z-index: 10000;
+            text-align: center;
+        }
+    }
+
     .pageLogo{
         text-align: center;
         background-image: url("../assets/textures/norsetech.png");
         background-size: auto 2em;
         background-position: center;
         background-repeat: no-repeat;
-        border-bottom: 1px solid black;
-        border-right: 1px solid black;
+        background-color: #e26f2d;
     }
 
     .pageHeader{
         text-align: center;
-        background-color: gold;
+        background-color: #e26f2d;
+        border-bottom: 1px solid black;
     }
 
     .pageMenu{
+        background-color: #e26f2d;
         height: 100vh;
         //background-image: url("../assets/textures/woodenTexture.jpg");
         border-right: 1px solid black;
@@ -60,5 +77,22 @@
 
     .pageView{
         padding:0em;
+    }
+}
+
+@keyframes ui-progress-spinner-color {
+    100%,
+    0% {
+        stroke: #ffffff;
+    }
+    40% {
+        stroke: #929292;
+    }
+    66% {
+        stroke: #363636;
+    }
+    80%,
+    90% {
+        stroke: #111111;
     }
 }
