--- a/src/app/components/ind/ind.component.scss
+++ b/src/app/components/ind/ind.component.scss
@@ -1,14 +1,14 @@
 .indContainer{
+    width: 100%;
 
-}
+    .fullPage{
+        height: 100vh;
+        overflow: auto;
+    }
 
-.noPadding{
-    padding:0em;
-}
-
-.square{
-    height: 50vh;
-    overflow: auto;
+    .noPadding{
+        padding:0em;
+    }
 
     .product-dropdown{
         
@@ -28,18 +28,18 @@
 
     .ui-g-2{
         padding-top: 0.2em;
-       padding-bottom: 0em;
+        padding-bottom: 0em;
 
     }
 
-     .ui-g-10{
+    .ui-g-10{
         padding-bottom: 0em;
         padding-top: 0.2em;
-     }
+    }
 
-     .checkbox{
-         padding-left: 0.2em;
-     }
+    .checkbox{
+        padding-left: 0.2em;
+    }
 
     .storeItemButton{
         .ui-button{
@@ -53,9 +53,10 @@
             background: green !important;
             border: 1px solid green !important;
         }
-    }
 
-     .withBorders{
+    }
+    
+    .withBorders{
         border:1px solid black;
     }
 
@@ -64,4 +65,5 @@
         color: black;
         border:1px solid black;
     }
+
 }
