Added errorHandling for apiErrors improvements to api and spinner

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,11 @@
             margin: 0 0 0 -37.5%;
             z-index: 10000;
             text-align: center;
+            background-image: url("../assets/textures/norsetech.png");
+            background-size: auto 2em;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: rgba(0, 0, 0, 0);
         }
     }
 
