--- a/src/app/components/ind/ind.component.html
+++ b/src/app/components/ind/ind.component.html
@@ -5,7 +5,7 @@
       <h3>Ind</h3>
       <div class="ui-g">
         <div class="ui-g-12">
-          <b *ngIf="indTelefon.imeisn">Imei: {{indTelefon.imei}}</b>
+          <b *ngIf="indTelefon.imeisn">Imei: {{indTelefon.imeisn}}</b>
           <b *ngIf="!indTelefon.imeisn">Indtast Imei/SN..</b>
         </div>
       </div>
