--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
     <p-growl [(value)]="msgs" life="2000"></p-growl>
     
   <div class="psContainer" *ngIf="spin > 0">
-  <i class="fa fa-cog fa-spin" style="font-size:100px; color:goldenrod "></i>
+  <i class="fa fa-cog fa-spin" style="font-size:20px "></i>
 </div>
 
   <div class="ui-g">
