--- a/src/app/components/ud/ud/ud.component.scss
+++ b/src/app/components/ud/ud/ud.component.scss
@@ -13,4 +13,15 @@
     h3{
         text-align: center;
     }
+
+    .searchHeader{
+        text-align: left;
+    }
+    .withBorders{
+        border-top: 1px solid black;
+        border-bottom: 1px solid black;
+    }
+    .withBorderTop{
+        border-top: 1px solid black;
+    }
 }
