--- a/src/app/components/status/status/status.component.html
+++ b/src/app/components/status/status/status.component.html
@@ -4,7 +4,21 @@
     <div class="ui-g-12 noPadding fullPage" id="statusSquare" style="background-color:#ddd87c;">
       <h3>Status</h3>
       <ul>
-        <li *ngFor="let event of events">{{event}}</li>
+        <li *ngFor="let event of log">
+
+          <div class="ui-g">
+            <div class="ui-g-2">
+                <b>{{event.user}}</b>&nbsp;<i class="fa fa-arrow-right"></i>
+            </div>
+            <div class="ui-g-4">
+                {{event.action}}&nbsp;<b>{{event.value}}</b>&nbsp;<i class="fa fa-arrow-right"></i>
+            </div>
+            <div class="ui-g-4">
+                {{event.date | date:'d MMMM, y, HH:mm:ss z'}}
+            </div>
+          </div>
+    
+        </li>
       </ul>
     </div>
   </div>
