implemented some of lagerComponent

--- a/src/app/components/lager/lager/lager.component.html
+++ b/src/app/components/lager/lager/lager.component.html
@@ -3,7 +3,65 @@
   <div class="ui-g">
     <div class="ui-g-12 noPadding fullPage" id="lagerSquare" style="background-color:#7cd17b;">
       <h3>Lager</h3>
-      
+      <div class="ui-g">
+        <div class="tableClass">
+          <p-table #dt [columns]="cols" [value]="shippings" [paginator]="true" [rows]="10" [tableStyle]="{'table-layout':'auto', 'font-size':'10px'}">
+            <ng-template pTemplate="header" let-columns>
+              <!-- <tr>
+                        <th>imeisn</th>
+                        <th>Produkt</th>
+                        <th>Faktura</th>
+                        <th>Fra</th>
+                        <th>Forsendesmetode</th>
+                        <th>tracking nummer</th>
+                        <th>Dato</th>
+                    </tr> -->
+
+              <tr>
+                <th *ngFor="let col of columns">
+                  {{col.header}}
+                </th>
+              </tr>
+              <tr>
+                <th *ngFor="let col of columns" [ngSwitch]="col.field">
+                  <div *ngSwitchCase="'imeisn'" class="ui-inputgroup">
+                    <span class="ui-inputgroup-addon"><i class="fa fa-search"></i></span>
+                    <input pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                  </div>
+                  <p-dropdown *ngSwitchCase="'product'" [options]="products" optionLabel="name" [style]="{'width':'100%'}"
+                    (onChange)="dt.filter($event.value, col.field.name, 'equals')"></p-dropdown>
+                  <div *ngSwitchCase="'invoice'" class="ui-inputgroup">
+                    <span class="ui-inputgroup-addon"><i class="fa fa-search"></i></span>
+                    <input pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                  </div>
+                  <div *ngSwitchCase="'origin'" class="ui-inputgroup">
+                      <span class="ui-inputgroup-addon"><i class="fa fa-search"></i></span>
+                      <input pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                    </div>
+                    <div *ngSwitchCase="'deliveryMethod'" class="ui-inputgroup">
+                        <span class="ui-inputgroup-addon"><i class="fa fa-search"></i></span>
+                        <input pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                      </div>
+                      <div *ngSwitchCase="'trackingNumber'" class="ui-inputgroup">
+                          <span class="ui-inputgroup-addon"><i class="fa fa-search"></i></span>
+                          <input pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
+                        </div>
+            
+                </th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-rowData let-columns="columns">
+              <tr [pSelectableRow]="rowData">
+                <td *ngFor="let col of columns" [ngSwitch]="col.field">
+                  <i *ngSwitchCase="'product'">{{rowData[col.field].name}}</i>
+                  <i *ngSwitchDefault>{{rowData[col.field]}}</i>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+
+        </div>
+      </div>
     </div>
   </div>
 </div>
