--- a/src/app/components/lager/lager/lager.component.scss
+++ b/src/app/components/lager/lager/lager.component.scss
@@ -13,4 +13,8 @@
     h3{
         text-align: center;
     }
+    //Virker ikke FIX!
+    .ui-inputtext, .ui-table .ui-paginator-bottom{ 
+        font-size: 10px !important; 
+        }
 }
