--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="appContainer">
   
     <p-growl [(value)]="msgs" life="2000"></p-growl>
-    
+    <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle" width="425"></p-confirmDialog>
+
   <div class="psContainer" *ngIf="spin > 0">
   <i class="fa fa-cog fa-spin" style="font-size:20px "></i>
 </div>
@@ -10,11 +11,27 @@
     <div class="ui-g-2 pageLogo"></div>
     <div class="ui-g-10 pageHeader">Norsetech</div>
     <div class="ui-g-2 pageMenu">
-      <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /> <a routerLink="/home" routerLinkActive="active-link">Home</a></nav>
+      <div class="ui-g">
+        <div class="ui-g-12">
+            <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /> <a routerLink="/home" routerLinkActive="active-link">Home</a></nav>
+            <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicI.png" /> <a routerLink="/ind" routerLinkActive="active-link">Ind</a></nav>
+            <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicU.png" /><a routerLink="/ud" routerLinkActive="active-link">Ud</a></nav>
+            <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicS.png" /><a routerLink="/status" routerLinkActive="activelink">Status</a></nav>
+            <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicL.png" /><a routerLink="/lager" routerLinkActive="activelink">Lager</a></nav>
+        
+        </div>
+        <div class="pageMenuFooter">
+            <span [colorPicker]="color"
+              [cpPosition]="'top'"
+            (colorPickerChange)="cmykColor=onChangeColorCmyk($event);color=$event" class="colorPicker"> ændre baggrund</span>
+        </div>
+      </div>
+      <!-- <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicH.png" /> <a routerLink="/home" routerLinkActive="active-link">Home</a></nav>
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicI.png" /> <a routerLink="/ind" routerLinkActive="active-link">Ind</a></nav>
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicU.png" /><a routerLink="/ud" routerLinkActive="active-link">Ud</a></nav>
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicS.png" /><a routerLink="/status" routerLinkActive="activelink">Status</a></nav>
       <nav class="menuButton"><img class="menuLetter" src="assets/textures/runicLetters/runicL.png" /><a routerLink="/lager" routerLinkActive="activelink">Lager</a></nav>
+     -->
     </div>
     <div class="ui-g-10 pageView">
       <router-outlet></router-outlet>
