--- a/src/app/components/infoboard/infoboard.component.html
+++ b/src/app/components/infoboard/infoboard.component.html
@@ -3,20 +3,34 @@
   <div class="ui-g">
     <div class="ui-g-12 noPadding fullPage" id="infoBoardSquare" style="background-color:black; color:white">
       <h3>Oversigt</h3>
+
       <div class="ui-g">
+
         <div class="ui-g-12 clock">
           <h3>{{clock | date:'HH:mm:ss'}}</h3>
         </div>
+
         <div class="ui-g-4">
+          <h3>Varer solgt</h3>
           <div class="ui-g">
             <div class="ui-g-3"></div>
             <div class="ui-g-6 merch">
               <div class="ui-g">
                 <div class="ui-g-12">
-                  <h3>Varer solgt</h3>
-                </div>
-                <div class="ui-g-12">
-                  <h3>{{merchSold}}</h3>
+                  <div class="ui-g">
+                    <div class="ui-g-12 center">
+                      Denne måned
+                    </div>
+                    <div class="ui-g-12">
+                      <h3>{{merchSoldThisMonth}}</h3>
+                    </div>
+                    <div class="ui-g-12 center">
+                      Totalt
+                    </div>
+                    <div class="ui-g-12">
+                      <h3>{{merchSold}}</h3>
+                    </div>
+                  </div>
                 </div>
                 <div class="ui-g-12"></div>
               </div>
@@ -24,44 +38,73 @@
             <div class="ui-g-3"></div>
           </div>
         </div>
+
         <div class="ui-g-4">
-            <div class="ui-g">
-                <div class="ui-g-3"></div>
-                <div class="ui-g-6 value">
+          <h3>varer på lager</h3>
+          <div class="ui-g">
+            <div class="ui-g-3"></div>
+            <div class="ui-g-6 value">
+              <div class="ui-g">
+                <div class="ui-g-12">
                   <div class="ui-g">
-                    <div class="ui-g-12">
-                      <h3>Total værdi</h3>
+                    <div class="ui-g-12 center">
+                      Denne måned
                     </div>
                     <div class="ui-g-12">
-                        <h3 *ngIf="totalValue <= 5000" class="red">{{totalValue | currency:'ddk':'':'4.2-2'}} kr</h3>
-                        <h3 *ngIf="totalValue < 10000 && totalValue > 5000" class="yellow">{{totalValue | currency:'ddk':'':'4.2-2'}} kr</h3>
-                        <h3 *ngIf="totalValue >= 10000" class="green">{{totalValue | currency:'ddk':'':'4.2-2'}} kr</h3>
+                      <h3>{{merchInStorageThisMonth}}</h3>
                     </div>
-                    <div class="ui-g-12"></div>
+                    <div class="ui-g-12 center">
+                      Totalt
+                    </div>
+                    <div class="ui-g-12">
+                      <h3>{{merchInStorage}}</h3>
+                    </div>
                   </div>
+                  <!-- <h3 *ngIf="totalValue <= 5000" class="red">{{totalValue | currency:'ddk':'':'4.2-2'}} kr</h3>
+                  <h3 *ngIf="totalValue < 10000 && totalValue > 5000" class="yellow">{{totalValue |
+                    currency:'ddk':'':'4.2-2'}} kr</h3>
+                  <h3 *ngIf="totalValue >= 10000" class="green">{{totalValue | currency:'ddk':'':'4.2-2'}} kr</h3> -->
                 </div>
-                <div class="ui-g-3"></div>
+                <div class="ui-g-12"></div>
               </div>
+            </div>
+            <div class="ui-g-3"></div>
+          </div>
         </div>
+
         <div class="ui-g-4">
-            <div class="ui-g">
-                <div class="ui-g-3"></div>
-                <div class="ui-g-6 profit">
+          <h3>Total profit</h3>
+          <div class="ui-g">
+            <div class="ui-g-3"></div>
+            <div class="ui-g-6 profit">
+              <div class="ui-g">
+                <div class="ui-g-12">
                   <div class="ui-g">
-                    <div class="ui-g-12">
-                      <h3>Total profit</h3>
+                    <div class="ui-g-12 center">
+                      Denne måned
                     </div>
                     <div class="ui-g-12">
-                      <h3 *ngIf="totalProfit <= 1000" class="red">{{totalProfit | currency:'ddk':'':'4.2-2'}} kr</h3>
-                      <h3 *ngIf="totalProfit < 2000 && totalProfit > 1000" class="yellow">{{totalProfit | currency:'ddk':'':'4.2-2'}} kr</h3>
-                      <h3 *ngIf="totalProfit >= 2000" class="green">{{totalProfit | currency:'ddk':'':'4.2-2'}} kr</h3>
+                      <h3 style="color: red">Todo</h3>
                     </div>
-                    <div class="ui-g-12"></div>
+                    <div class="ui-g-12 center">
+                      Totalt
+                    </div>
+                    <div class="ui-g-12">
+                      <h3 style="color:red">Todo</h3>
+                    </div>
                   </div>
+                  <!-- <h3 *ngIf="totalProfit <= 1000" class="red">{{totalProfit | currency:'ddk':'':'4.2-2'}} kr</h3>
+                  <h3 *ngIf="totalProfit < 2000 && totalProfit > 1000" class="yellow">{{totalProfit |
+                    currency:'ddk':'':'4.2-2'}} kr</h3>
+                  <h3 *ngIf="totalProfit >= 2000" class="green">{{totalProfit | currency:'ddk':'':'4.2-2'}} kr</h3> -->
                 </div>
-                <div class="ui-g-3"></div>
+                <div class="ui-g-12"></div>
               </div>
+            </div>
+            <div class="ui-g-3"></div>
+          </div>
         </div>
+
       </div>
     </div>
   </div>
