removed unused button from udComponent

--- a/src/app/components/ud/ud/ud.component.html
+++ b/src/app/components/ud/ud/ud.component.html
@@ -64,12 +64,12 @@
 
                 <p-footer>
                   <div class="ui-g">
-                    <div class="ui-g-6 ui-md-6 ui-lg-6 withBorderTop">
+                    <div class="ui-g-12">
                       <button icon="fa fa-truck" pButton type="button" label="Send fra lager" class="ui-button-success" (click)="sendShippingFromStorage()" ></button>
                     </div>
-                    <div class="ui-g-6 ui-md-6 ui-lg-6 withBorderTop">
+                    <!-- <div class="ui-g-6">
                       <button pButton type="button" label="Send til bedste" class="ui-button-info"></button>
-                    </div>
+                    </div> -->
                   </div>
                 </p-footer>
 
